--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Provinces of Ireland
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ul>
+    <li [routerLink]="['/ulster-page']">Ulster</li>
+    <li [routerLink]="['/munster-page']">Munster</li>
+    <li [routerLink]="['/connaught-page']">Connaught</li>
+    <li [routerLink]="['/leinster-page']">Leinster</li>
+  </ul>
 </ion-content>
